# labs-feature-engineering

./: LICENSE  README.md  pyproject.toml
notebooks/: 0.1_check_binning.ipynb
src/utils/: kaggle_manager.py
